fix layout problems

--- a/frontend/src/app/game/game.component.less
+++ b/frontend/src/app/game/game.component.less
@@ -4,14 +4,14 @@
 }
 
 .pins{
-  width: 550px;
+  width: 100%;
   margin: 0 auto;
   .row{
     margin: 0 auto;
     padding: 50px 0;
 
     .pin{
-      width: 100px;
+      width: 200px;
       height: 100px;
       padding: 50px 25px;
       display: inline;
@@ -50,6 +50,7 @@
     margin: 0 10px;
     border-radius: 5px;
     border: black 1px solid;
+    display: inline-block;
   }
 }
 
